# keyword-extractor

./: .gitignore  LICENCE  README.md  example_doc.txt  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
src/: keyword_extractor.py
tests/: test_keyword_extractor.py
tests/data/: tongue_twister.txt
