[tool.poetry]
name = "keyword-extractor"
version = "0.1.0"
description = "Extract keywords from documents with spaCy and scikit-learn"
authors = ["Scott Stevenson <scott@stevenson.io>"]
license = "MIT"

[tool.poetry.scripts]
keyword-extractor = "keyword_extractor:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0.0"
scikit-learn = ">=1.1"
spacy = ">=3.4.1"
tabulate = ">=0.8.10"

[tool.poetry.group.dev.dependencies]
black = ">=22.8"
flake8 = ">=5.0.4"
flake8-pyproject = ">=1.2.3"
flake8-pytest-style = ">=1.7.2"
isort = ">=5.12.0"
mypy = ">=0.981"
poethepoet = ">=0.22.0"
pycln = ">=2.2.2"
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
pyupgrade = ">=2.38.2"
types-tabulate = ">=0.8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.flake8]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "sklearn.feature_extraction.text"
ignore_missing_imports = true

[tool.poe.tasks]
_pyupgrade = "find . -name '*.py' -exec pyupgrade --py310-plus {} \\;"
_pycln = "pycln -a ."
_isort = "isort ."
_black = "black ."
fmt = ["_pyupgrade", "_pycln", "_isort", "_black"]

_isort_check = "isort --check ."
_black_check = "black --check ."
_flake8 = "flake8 ."
_mypy = "mypy ."
lint = ["_pyupgrade", "_pycln", "_isort_check", "_black_check", "_flake8", "_mypy"]

test = "pytest tests"
check = ["lint", "test"]

[tool.pytest.ini_options]
addopts = "--cov=keyword_extractor --cov-report=term-missing"
